--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -8,7 +8,7 @@ adjust_line_height 175%
 
 cursor_blink_interval 0
 enable_audio_bell 0
-hide_window_decorations yes
+# hide_window_decorations yes
 window_padding_width 10
 
 
