--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,18 +1,18 @@
-font_family JetBrains Mono Regular Nerd Font Complete
-bold_font JetBrains Mono Bold Nerd Font Complete
-italic_font JetBrains Mono Italic Nerd Font Complete
-bold_italic_font JetBrains Mono Bold Italic Nerd Font Complete
+font_family JetBrainsMonoNL Nerd Font Mono
+bold_font JetBrainsMonoNL Nerd Font Mono Bold
+italic_font JetBrainsMonoNL Nerd Font Mono Italic
+bold_italic_font JetBrainsMonoNL Nerd Font Mono Bold Italic
 
-font_size 16
-adjust_line_height 175%
+font_size 13
+modify_font cell_height 175%
+modify_font strikethrough_position 150%
 
 cursor_blink_interval 0
 enable_audio_bell 0
-# hide_window_decorations yes
-window_padding_width 10
-
+hide_window_decorations yes
+window_padding_width 0
 
 # BEGIN_KITTY_THEME
 # One Dark
-include current-theme.conf
+include tokyo-night.conf
 # END_KITTY_THEME
