--- a/idea/.ideavimrc
+++ b/idea/.ideavimrc
@@ -1,12 +1,16 @@
-set number relativenumber
+" set number relativenumber
 set surround
 set ideajoin
 set scrolloff=15
 set sidescrolloff=15
 set ignorecase smartcase
 set clipboard+=unnamed
+set visualbell
+set noerrorbells
+set highlightedyank
+set showmode
 
-let mapleader = " "
+let mapleader=" "
 
 " system clipboard
 " vmap <leader>y "+y
@@ -21,8 +25,66 @@ set NERDTree
 let g:NERDTreeMapActivateNode='l'
 let g:NERDTreeMapJumpParent='h'
 
+map gl $
+map gh 0
+
 " For insert mode, map ';;' to '<Esc>A;<Esc>'
 nmap ;; A;<ESC>
 
 " For insert mode, map ',,' to '<Esc>A,<Esc>'
 nmap ,, A,<ESC>
+
+nnoremap J mzJ`z
+nnoremap <C-d> <C-d>zz
+nnoremap <C-u> <C-u>zz
+nnoremap n nzzzv
+nnoremap N Nzzzv
+
+vnoremap J :m '>+1<CR>gv=gv
+vnoremap K :m '<-2<CR>gv=gv
+
+" For HarpoonIJ
+nmap <leader><C-7> :action SetHarpoon1<cr>
+nmap <leader><C-8> :action SetHarpoon2<cr>
+nmap <leader><C-9> :action SetHarpoon3<cr>
+nmap <leader><C-0> :action SetHarpoon4<cr>
+
+nmap <C-7> :action GotoHarpoon1<cr>
+nmap <C-8> :action GotoHarpoon2<cr>
+nmap <C-9> :action GotoHarpoon3<cr>
+nmap <C-0> :action GotoHarpoon4<cr>
+
+nmap <C-e> :action ShowHarpoon<cr>
+nmap <C-a> :action AddToHarpoon<cr>
+
+" Pane navigation
+" nnoremap <A-h> <C-w>h
+" nnoremap <A-l> <C-w>l
+" nnoremap <A-k> <C-w>k
+" nnoremap <A-j> <C-w>j
+
+vnoremap > >gv
+vnoremap < <gv
+
+" Jump between methods
+nmap [[ <Action>(MethodUp)
+nmap ]] <Action>(MethodDown)
+
+map <leader><leader> <Action>(SearchEverywhere)
+map <leader>o <Action>(GotoClass)
+map <leader>a <Action>(GotoAction)
+map <leader>f <Action>(GotoFile)
+map <leader>s <Action>(GotoSymbol)
+map <leader>d <Action>(FileStructurePopup)
+map <leader>e <Action>(RecentFiles)
+
+map <leader>t <Action>(Refactorings.QuickListPopupAction)
+
+map <D-k> <Action>(EditorSelectWord) 
+map <D-j> <Action>(EditorUnSelectWord) 
+
+map <Leader>pf <action>(com.mituuz.fuzzier.Fuzzier)
+map <Leader>mf <action>(com.mituuz.fuzzier.FuzzyMover)
+map <Leader>gf <action>(com.mituuz.fuzzier.FuzzierVCS)
+
+map <Leader>1 <action>(SelectInProjectView)
