--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -19,7 +19,12 @@ set -g allow-rename on
 set -g renumber-windows on
 
 # Improve colors
-set -g default-terminal "${TERM}"
+# set -g default-terminal "${TERM}"
+# set-option -sa terminal-overrides ",${TERM}*:Tc"
+
+set -g default-terminal "tmux-256color"
+set-option -gas terminal-overrides "*:Tc" # true color support
+set-option -gas terminal-overrides "*:RGB" # true color support
 
 # Enable undercurl
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
